# retort

./: Cargo.toml
crates/retort/: Cargo.toml
crates/retort/examples/: moved_value.rs  moved_value.txt  nonsend_future.txt  referencing_temporary.txt  rustc.rs  rustc_source.txt
crates/retort/src/: annotation.rs  lib.rs  lsp.rs  message.rs  slice.rs  snippet.rs  span.rs
crates/retort/src/diagnostic/: builders.rs  mod.rs
crates/retort/src/render/: line.rs  list.rs  mod.rs
crates/retort/src/renderer/: line.rs  list.rs  lsp.rs  mod.rs
crates/retort/src/style/: highlighting.rs  mod.rs  rustc.rs
