[package]
name = "retort"
version = "0.1.0"
edition = "2018"

authors = [
    "Brendan Zabarauskas <bjzaba@yahoo.com.au>",
    "Christopher Durham <cad97@cad97.com>",
    "Yehuda Katz <wycats@gmail.com>",
    "Zibi Braniecki <gandalf@mozilla.com>",
]

[dependencies]
# public
termcolor = "1.0"
syntect = { version = "3.3", default-features = false, optional = true }

# private
scopeguard = "1.0"
bytecount = "0.6"
