[package]
name = "retort"
version = "0.1.0"
edition = "2018"

authors = [
    "Brendan Zabarauskas <bjzaba@yahoo.com.au>",
    "Christopher Durham <cad97@cad97.com>",
    "Yehuda Katz <wycats@gmail.com>",
    "Zibi Braniecki <gandalf@mozilla.com>",
]

[dependencies]
lsp-types = { version = "0.61.0", optional = true }
termcolor = "1.0.5"
scopeguard = "1.0.0"
bytecount = "0.6.0"

[[example]]
name = "rustc"
path = "examples/rustc.rs"
required-features = ["lsp-types"]
